Reverted query parameter deprecation changes in IntellectualObjects because of their severe adverse effects on performance
